[package]
name = "boron-lang"
version = "0.2.0"
edition = "2018"
authors = ["Joseph Hobbs"]
description = "A fast, memory-safe, intuitive programming language."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.0"

[[bin]]
name = "bvm"
path = "src/bvm.rs"

[[bin]]
name = "boron"
path = "src/boron.rs"

[lib]
name = "boron"
path = "src/lib.rs"