[package]
name = "boron-lang"
version = "0.5.2"
edition = "2021"
authors = ["Joseph Hobbs"]
description = "A fast, memory-safe, intuitive programming language."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.0"
colored = "2.0.0"

[[bin]]
name = "boron"
path = "src/boron.rs"

[lib]
name = "boron"
path = "src/lib.rs"